[package]
name = "terminal-dungeon"
version = "0.1.0"
authors = ["Phillip O'Reggio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
nalgebra = "0.24.0"
