[package]
name = "terminal-dungeon"
version = "0.1.0"
authors = ["Phillip O'Reggio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
nalgebra = "0.24.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

[dev-dependencies]
enigo = "0.0.14"
serial_test = "*"
